[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pii-redactor"
version = "0.1.0"
description = "Self-hosted PII redaction step for LLM observability pipelines."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
local = [
  "transformers>=4.44.0",
  "optimum[onnxruntime]>=1.21.0",
]
test = [
  "pytest>=8.2.0",
]
langfuse = [
  "langfuse>=3.0.0",
]

[project.scripts]
pii-redactor-demo = "examples.demo:main"
pii-redactor-langfuse-demo = "examples.langfuse_demo:main"

[tool.hatch.build.targets.wheel]
packages = ["pii_redactor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
