[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "any-lang-anonymizer"
version = "2026.6.5.post1"
description = "Self-hosted PII redaction step for LLM observability pipelines."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "huggingface-hub>=0.24.0",
  "onnxruntime>=1.18.0",
  "tokenizers>=0.19.0",
]

[project.optional-dependencies]
test = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "python-dotenv>=0.13",
  "uvicorn[standard]>=0.30.0",
]
langfuse = [
  "langfuse>=3.0.0",
]
langchain = [
  "langchain>=1.0.0",
  "langchain-groq>=1.0.0",
  "langchain-openai>=1.0.0",
  "langfuse>=3.0.0",
  "langgraph>=1.0.0",
]
server = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0",
]
demo = [
  "httpx>=0.27.0",
  "langfuse>=3.0.0",
  "python-dotenv>=0.13",
]

[tool.hatch.build.targets.wheel]
packages = ["pii_redactor"]

[tool.hatch.build.targets.sdist]
include = [
  "LICENSE",
  "README.md",
  "pii_redactor",
  "pyproject.toml",
]
exclude = [
  ".gitignore",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
